# nRF52840-SD-MP3-Player

./: .gitmodules  CMakeLists.txt  README.md  app.overlay  prj.conf
src/: heartbeat.c  main.c
src/decoder/: CMakeLists.txt  decoder.c  decoder.h  decoder_interface.h  decoder_task.c  decoder_task.h
src/decoder/decoder_flac/: decoder_flac.c  decoder_flac.h
src/decoder/decoder_mp3/: decoder_mp3.c  decoder_mp3.h
src/decoder/decoder_wav/: decoder_wav.c  decoder_wav.h
src/display/: CMakeLists.txt  display.c  display.h
src/gui/: CMakeLists.txt  gui.c  gui.h
src/keyboard/: CMakeLists.txt  keyboard.c  keyboard.h
src/player/: CMakeLists.txt  player.c  player.h
src/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.c  ssd1306_fonts.h
src/utilities/: CMakeLists.txt
src/utilities/dir/: CMakeLists.txt  dir.c  dir.h
src/utilities/list/: CMakeLists.txt  list.c  list.h
src/utilities/natsort/: CMakeLists.txt
src/utilities/utils/: CMakeLists.txt  utils.h
src/utils/: CMakeLists.txt  utils.h
